Change the base api url

--- a/Blog.Blazor/Pages/Post.razor
+++ b/Blog.Blazor/Pages/Post.razor
@@ -35,7 +35,7 @@
     private async Task InsertPost()
     {
         var client = HttpClientFactory.CreateClient("AuthorizedClient");
-        await client.PostAsJsonAsync<CreatePost>("https://localhost:7163/api/v1/Post", post);
+        await client.PostAsJsonAsync<CreatePost>("https://farzad-blog-api.azurewebsites.net/api/v1/Post", post);
         Navigation.NavigateTo("/home");
     }
     
