--- a/Blog.Blazor/_Imports.razor
+++ b/Blog.Blazor/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Blog.Blazor
 @using Blog.Blazor.Layout
+@using Microsoft.AspNetCore.Components;
+@using Microsoft.AspNetCore.Components.Authorization;
