--- a/Blog.Blazor/Layout/NavMenu.razor
+++ b/Blog.Blazor/Layout/NavMenu.razor
@@ -14,11 +14,28 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="post">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Post
-            </NavLink>
-        </div>
+        <AuthorizeView>
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="posts">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Posts
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="post">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Post
+                    </NavLink>
+                </div>
+            </Authorized>
+            <NotAuthorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="register">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Register
+                    </NavLink>
+                </div>
+            </NotAuthorized>
+        </AuthorizeView>
+        
     </nav>
 </div>
 
