Add Post Detail page

--- a/Blog.Blazor/Pages/Post.razor
+++ b/Blog.Blazor/Pages/Post.razor
@@ -9,7 +9,7 @@
 
 <div class="row">
     <EditForm Model="@post" OnValidSubmit="InsertPost">
-        <div class="form-group">
+        <div class="form-group" style="margin: 16px;">
             <label>Text: </label>
             <InputText @bind-Value="post.Text" />
         </div>
