--- a/Blog.Blazor/Pages/Home.razor
+++ b/Blog.Blazor/Pages/Home.razor
@@ -6,7 +6,7 @@
 
 <AuthorizeView>
     <Authorized>
-        <h1>Hello, @context.User.Identity?.Name</h1>
+        <h1>Hello, @context.User.Identity?.Name (will be fixed and show your name)</h1>
     </Authorized>
     <NotAuthorized>
         <h1>Hello, Guest!</h1>
