--- a/Blog.Blazor/Layout/MainLayout.razor
+++ b/Blog.Blazor/Layout/MainLayout.razor
@@ -4,6 +4,16 @@
 @inject NavigationManager Navigation;
 @inherits LayoutComponentBase
 
+@* Required *@
+<MudThemeProvider />
+<MudPopoverProvider />
+
+@* Needed for dialogs *@
+<MudDialogProvider />
+
+@* Needed for snackbars *@
+<MudSnackbarProvider />
+
 <div class="page">
     <div class="sidebar">
         <NavMenu/>
