--- a/Blog.Blazor/_Imports.razor
+++ b/Blog.Blazor/_Imports.razor
@@ -10,3 +10,4 @@
 @using Blog.Blazor.Layout
 @using Microsoft.AspNetCore.Components;
 @using Microsoft.AspNetCore.Components.Authorization;
+@using MudBlazor
